Improvements to training data parsing, some restructuring

--- a/notebooks/lcztools.ini
+++ b/notebooks/lcztools.ini
@@ -1,9 +1,12 @@
 [default]
 # This is directory where the network weights are stored
-weights_dir = ~/git/leela-chess/release/
+weights_dir = /Volumes/SeagateExternal/leela_data/weights/
 
 # This is the default weights filename to use, if none provided
 weights_file = weights.txt.gz
+
+# This is where raw training files are stored
+training_raw_dir = /Volumes/SeagateExternal/leela_data/training_raw/
 
 # This is the default backend to use, if none provided
 # Choices are: ['pytorch', 'pytorch_cuda', 'pytorch_orig', 'tensorflow']
@@ -14,4 +17,4 @@ lczero_engine = ~/git/leela-chess/release/lczero
 
 # This is, e.g. ~/sompath/leela-chess/training/tf -- currently only used as hackish tensorflow
 # mechanism. Not needed for pytorch backend
-leela_training_tf_dir = ~/git/leela-chess/training/tf
+leela_training_tf_dir = ~/git/leela-chess/training/tf/
