--- a/tests/lcztools.ini
+++ b/tests/lcztools.ini
@@ -1,16 +1,16 @@
 [default]
 # This is directory where the network weights are stored
-weights_dir = /Volumes/SeagateExternal/leela_data/weights/
+weights_dir = ~/projects/lczero/weights
 
 # This is the default weights filename to use, if none provided
-weights_file = weights.txt.gz
+weights_file = weights_run1_21754.txt.gz
 
 # This is where raw training files are stored
 training_raw_dir = /Volumes/SeagateExternal/leela_data/training_raw/
 
 # This is the default backend to use, if none provided
 # Choices are: ['pytorch', 'pytorch_cuda', 'pytorch_orig', 'tensorflow']
-backend = pytorch
+backend = pytorch_cuda
 
 # This is the lczero engine to use, only currently used for testing/validation
 lczero_engine = ~/git/leela-chess/release/lczero
