Add policy softmax temp

--- a/tests/lcztools.ini
+++ b/tests/lcztools.ini
@@ -1,6 +1,6 @@
 [default]
 # This is directory where the network weights are stored
-weights_dir = ~/projects/lczero/weights
+weights_dir = ~/projects/lczero/weights/txt
 
 # This is the default weights filename to use, if none provided
 weights_file = weights_run1_21754.txt.gz
@@ -18,3 +18,6 @@ lczero_engine = ~/git/leela-chess/release/lczero
 # This is, e.g. ~/sompath/leela-chess/training/tf -- currently only used as hackish tensorflow
 # mechanism. Not needed for pytorch backend
 leela_training_tf_dir = ~/git/leela-chess/training/tf/
+
+# This is the policy softmax temp, like lc0's option
+policy_softmax_temp = 2.2
