Added support for lc0 engine testing

--- a/tests/lcztools.ini
+++ b/tests/lcztools.ini
@@ -12,12 +12,18 @@ training_raw_dir = /Volumes/SeagateExternal/leela_data/training_raw/
 # Choices are: ['pytorch', 'pytorch_cuda', 'pytorch_orig', 'tensorflow']
 backend = pytorch_cuda
 
-# This is the lczero engine to use, only currently used for testing/validation
-lczero_engine = ~/git/leela-chess/release/lczero
+### This is the lczero engine to use, only currently used for testing/validation
+## NOTE: lczero no longer supported!!!
+## lczero_engine = ~/git/leela-chess/release/lczero
 
-# This is, e.g. ~/sompath/leela-chess/training/tf -- currently only used as hackish tensorflow
-# mechanism. Not needed for pytorch backend
-leela_training_tf_dir = ~/git/leela-chess/training/tf/
+
+# This is the lc0 engine to use, only currently used for testing/validation
+lc0_engine = ~/.local/bin/lc0
+
+
+### This is, e.g. ~/sompath/leela-chess/training/tf -- currently only used as hackish tensorflow
+### mechanism. Not needed for pytorch backend
+## leela_training_tf_dir = ~/git/leela-chess/training/tf/
 
 # This is the policy softmax temp, like lc0's option
 policy_softmax_temp = 2.2
