--- a/tests/lcztools.ini
+++ b/tests/lcztools.ini
@@ -9,8 +9,8 @@ weights_file = weights_run1_21754.txt.gz
 training_raw_dir = /Volumes/SeagateExternal/leela_data/training_raw/
 
 # This is the default backend to use, if none provided
-# Choices are: ['pytorch', 'pytorch_cuda', 'pytorch_orig', 'tensorflow']
-backend = pytorch_cuda
+# Choices are: ['pytorch_cpu', 'pytorch_cuda', 'pytorch_orig_cpu', 'pytorch_orig_cuda', 'tensorflow']
+backend = pytorch_orig_cuda
 
 ### This is the lczero engine to use, only currently used for testing/validation
 ## NOTE: lczero no longer supported!!!
